# Leadgen

./: .dockerignore  .env.example  .gitignore  BOT_CONCEPT.md  CLAUDE.md  DESIGN_BRIEF.md  Dockerfile  PLAN.md  PRODUCT_READINESS_AUDIT.md  README.md  alembic.ini  pyproject.toml  railway.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260420_0001_initial_schema.py  20260422_0002_add_user_profile.py  20260423_0004_dedup_and_active_search_lock.py  20260423_0005_teams_and_memberships.py  20260424_0006_web_source_and_lead_crm.py  20260425_0010_uuid_columns_for_team_tables.py  20260425_0011_team_descriptions_and_team_seen_leads.py  20260426_0015_uuid_for_email_verification_tokens_id.py  20260427_0017_widen_profession_to_text.py  20260427_0018_users_gender.py  20260427_0020_lead_fields_activity_tasks.py  20260427_0021_user_audit_logs.py
frontend/: .env.local.example  .gitignore  README.md  next.config.js  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/app/: layout.tsx  page.tsx
frontend/components/: AppShell.tsx  AssistantWidget.tsx  AuthGate.tsx  AuthShell.tsx  HealthBadge.tsx  HenryAvatar.tsx  Icon.tsx  KeyboardShortcuts.tsx  LanguageSwitcher.tsx  LegalShell.tsx  ProfileNudgeBanner.tsx  PublicPageShell.tsx  RequireAuth.tsx  SearchStatusPill.tsx  ThemeProvider.tsx
frontend/lib/: api.ts  demoUser.ts  format.ts  i18n.tsx  mockLeads.ts  tint.ts  useProgress.ts
frontend/public/: manifest.webmanifest
scripts/: migrate.sh
src/leadgen/: __main__.py  config.py
tests/: conftest.py  test_aggregator.py  test_ai_fallback.py  test_ai_json_parser.py  test_billing_service.py  test_closed_business_filter.py  test_enrichment_reviews.py  test_filename.py  test_generic_email_filter.py  test_health_endpoint.py  test_normalize_profession.py  test_profile_parsers.py  test_profile_service.py  test_rate_limit.py  test_retry.py  test_search_sink_refactor.py  test_secrets_sanitizer.py  test_sinks.py
(+82 files in other folders)
