[project]
name = "leadgen"
version = "0.1.0"
description = "Telegram bot for B2B lead generation via Google Places"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.5.0",
    "sqlalchemy[asyncio]>=2.0.29",
    "asyncpg>=0.29.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.1",
    "httpx>=0.27.0",
    "openpyxl>=3.1.2",
    "structlog>=24.1.0",
    "anthropic>=0.39.0",
    "beautifulsoup4>=4.12.0",
    "alembic>=1.14.0",
    "aiohttp>=3.9.0",
    "prometheus-client>=0.20.0",
    "arq>=0.26.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/leadgen"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM"]
ignore = ["E501", "UP017", "UP047"]

[tool.ruff.lint.isort]
known-first-party = ["leadgen"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
